--- a/work-12.html
+++ b/work-12.html
@@ -108,11 +108,11 @@
                     	</div>
                         <p> </p>
                       <h1>OPTIMIZACIÓN DEL DISPOSITIVO CON NUEVOS MOTORES.</h1>
-                        <p2> En esta semana se optimizará el prototipo  con los nuevos motores y se hará breves cambios en la programación de acuerdo a la potencia que se necesita. </p2> 
+                        <p2> En esta semana se optimizará el prototipo  con los nuevos motores y se harán breves cambios en la programación de acuerdo a la potencia que se necesita. </p2> 
                        <div class="row">
 					<div class="col-md-5">
 						<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft"></h2>
-						<p class="fh5co-lead animate-box" data-animate-effect="fadeInLeft">Se realizó un nuevo case, ya que el anterior no encajaba con los nuevos motores y se necesito hacer aberturas debido a la irregularidades que presentan los motores .</p>
+						<p class="fh5co-lead animate-box" data-animate-effect="fadeInLeft">Se realizó un nuevo case, ya que el anterior no encajaba con los nuevos motores y se necesito hacer aberturas debido a las irregularidades que presentan los motores .</p>
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box" data-animate-effect="fadeInLeft">
 						<img src="images2/XIME1.jpeg" alt="Free HTML5 Bootstrap Template" class="img-responsive"> 
@@ -123,7 +123,7 @@
 				<div class="row">
 					<div class="col-md-5">
 						<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft"></h2>
-						<p class="fh5co-lead animate-box" data-animate-effect="fadeInLeft">En este video se lijo las superficies del case debido a que se necesitaba que los motores encajen en las dos aberturas.</p>
+						<p class="fh5co-lead animate-box" data-animate-effect="fadeInLeft">En este video se lijo las superficies del case interno para un buen encaje de los motores en las aberturas.</p>
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box" data-animate-effect="fadeInLeft">
 						<video src="Videos/brokecase.mp4" width=600 height=500 controls poster="vistaprevia.jpg">
@@ -146,7 +146,7 @@
 						<div class="row">
 					<div class="col-md-5">
 						<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft"></h2>
-						<p class="fh5co-lead animate-box" data-animate-effect="fadeInLeft">En este video se observa el funcionamiento de los motores para contrarrestar algún movimiento involuntario</p>
+						<p class="fh5co-lead animate-box" data-animate-effect="fadeInLeft">En este video se observa el funcionamiento de los motores para contrarrestar el movimiento involuntario.</p>
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box" data-animate-effect="fadeInLeft">
 						<video src="Videos/prueba.mp4" width=600 height=500 controls poster="vistaprevia.jpg">
